# faktury

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  publish.sh
config/: default.toml
front/: .gitignore  README.md  package-lock.json  package.json
front/public/: index.html
front/sass/: style.scss
front/src/: App.vue  fonts.css  global.js  main.js  routes.js  state_store.js
front/src/components/: ContactBox.vue  ContactDetail.vue  Contacts.vue  ContactsDialog.vue  ContactsPage.vue  Dashboard.vue  DashboardPage.vue  InvoiceDetail.vue  Invoices.vue  InvoicesPage.vue  InvoicesTable.vue  LoginForm.vue  MainApp.vue  NotFound.vue  UserSettings.vue  YearOverviewChart.vue
front/src/components/dashboard/: Contacts.vue  DashboardContacts.vue  DashboardInvoices.vue  DashboardYearOverview.vue  Invoices.vue  InvoicesTable.vue
front/src/components/invoice-detail/: InvoiceNewRow.vue  InvoiceRow.vue  InvoiceRows.vue
migrations/1_create-tables/: down.sql  up.sql
migrations/2020-06-18-180258_create_contacts/: up.sql
migrations/2020-06-18-180316_create_invoices/: down.sql  up.sql
migrations/2020-06-18-180323_create_invoice_rows/: down.sql  up.sql
migrations/2020-06-21-160911_create_enterpreneurs/: down.sql  up.sql
migrations/2020-06-21-182008_create_relations/: up.sql
src/: config.rs  main.rs  models.rs  schema.rs
src/dao/: mod.rs  models.rs  schema.rs
src/handlers/: dto.rs  mod.rs
src/logic/: auth.rs  iban.rs  invoices.rs  mod.rs  settings.rs
src/logic/pdf/: mod.rs  qrcode.rs
src/pdf/: mod.rs
