[package]
name = "faktury"
version = "0.1.0"
authors = ["Jan Kolena <jendakolena@gmail.com>"]
edition = "2018"

[dependencies]
actix-cors = "~0.2"
actix-rt = "~1.0"
actix-web = "~2.0"
actix-files = "~0.2"
async-trait = "~0.1"
base64 = "~0.12"
env_logger = "~0.7"
err-context = "~0.1"
humantime = "~1.3"
config = "~0.10"
diesel = { version = "~1.4", features = ["mysql", "chrono", "r2d2"] }
diesel_logger = "~0.1"
diesel_migrations = "~1.4"
dotenv = "~0.15"
futures = "~0.3"
frunk = "~0.3"
frunk_core = "~0.3"
chrono = { version = "~0.4", features = ["serde", "rustc-serialize"] }
log = "~0.4"
qrcode-generator = "~1.0"
percent-encoding = "~2.1"
printpdf = "~0.3"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
uuid = { version = "~0.8", features = ["serde", "v4"] }

[dev-dependencies]
iban_validate = "~4.0"
