[package]
name = "faktury"
version = "0.1.0"
authors = ["Jan Kolena <jendakolena@gmail.com>"]
edition = "2021"

[dependencies]
actix-cors = "0.6.1"
actix-rt = "2.7.0"
actix-web = "4.0.1"
actix-http = "3.0.4"
actix-files = "0.6.0"
async-trait = "0.1.53"
base64 = "0.13.0"
env_logger = "0.9.0"
err-context = "0.1.0"
hex = "0.4.3"
humantime = "2.1.0"
config = "0.13.1"
diesel = { version = "1.4.8", features = ["mysql", "chrono", "r2d2"] }
diesel_logger = "0.1.1"
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
futures = "0.3.21"
frunk = "0.4.0"
frunk_core = "0.4.0"
chrono = { version = "0.4.19", features = ["serde", "rustc-serialize"] }
itertools = "0.10.3"
log = "0.4.16"
qrcode-generator = "4.1.6"
percent-encoding = "2.1.0"
printpdf = {version = "0.5.2", features = ["embedded_images"]}
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sha2 = "0.10.2"
uuid = { version = "1.0.0", features = ["serde", "v4"] }

[dev-dependencies]
iban_validate = "4.0.1"
